--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,5 @@
+@import "./base/grid.scss";
+@import "./component/modal.scss";
 html {
   box-sizing: border-box;
 }
@@ -18,8 +20,6 @@ p {
   margin: 0;
 }
 
-@import "./base/grid.scss";
-
 body {
   background-image: radial-gradient(
       circle,
@@ -37,18 +37,20 @@ body {
 //heder
 header {
   position: fixed;
-  height: 70px;
+  height: 75px;
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgba(235, 230, 219, 0.5);
 }
 
 .search-form {
-  position: absolute;
-  top: 38px;
-  left: 55%;
+  // position: absolute;
+  // top: 38px;
+  // left: 70%;
+  position: relative;
 }
 
 .search-form button {
@@ -56,8 +58,8 @@ header {
   border: none;
   cursor: pointer;
   position: absolute;
-  top: 1px;
-  right: 2px;
+  top: 2px;
+  right: 0;
 }
 
 .search-form button:hover,
@@ -69,7 +71,7 @@ header {
 .search-form input {
   border: none;
   border-radius: 5px;
-  height: 30px;
+  height: 32px;
   padding: 5px;
   width: 200px;
   padding-right: 30px;
@@ -116,4 +118,8 @@ ul {
 
 .hiden {
   visibility: hidden;
+}
+
+.overflow-hiden {
+  overflow: hidden;
 }
