--- a/src/sass/component/modal.scss
+++ b/src/sass/component/modal.scss
@@ -13,6 +13,7 @@
   opacity: 0;
   pointer-events: none;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 10;
 }
 
 .lightbox.is-open {
