--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -37,7 +37,8 @@ body {
 //heder
 header {
   position: fixed;
-  height: 75px;
+  // height: 75px;
+  padding: 10px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -47,9 +48,6 @@ header {
 }
 
 .search-form {
-  // position: absolute;
-  // top: 38px;
-  // left: 70%;
   position: relative;
 }
 
@@ -59,7 +57,7 @@ header {
   cursor: pointer;
   position: absolute;
   top: 2px;
-  right: 0;
+  right: 2px;
 }
 
 .search-form button:hover,
@@ -73,7 +71,7 @@ header {
   border-radius: 5px;
   height: 32px;
   padding: 5px;
-  width: 200px;
+  width: 250px;
   padding-right: 30px;
 }
 
@@ -101,25 +99,39 @@ ul {
   list-style: disc;
 }
 
-.btn-more {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: transparent;
+.btn-top {
+  background-color: rgba(223, 223, 223, 0.7);
+  // border: 1px solid black;
   border: none;
-  margin-top: 10px;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
-  padding: 10px;
-}
-.btn-more:hover {
-  background-color: rgb(71, 71, 71);
-  border-radius: 5px;
+  position: fixed;
+  bottom: 15px;
+  right: 15px;
+  outline: none;
 }
 
-.hiden {
+.btn-top:hover {
+  transform: scale(1.1);
+}
+
+.hidden {
   visibility: hidden;
 }
 
-.overflow-hiden {
+.overflow-hidden {
+  overflow: hidden;
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
   overflow: hidden;
 }
